# COVID-epidemic-prediction-ML

./: Makefile  README.md  docs.md  idea.txt  main.py  pyproject.toml  requirements.txt  seird_model_documentation_v1.md  seird_pipeline.py  seirdv_pipeline.py  sir_pipeline.py
configs/: data_sources.yaml
data/metadata/: sources_registry.json
data/processed/: analysis_dataset.csv  covid_france.parquet  covid_france_seird_parameters.parquet  covid_france_seird_ready.parquet  covid_france_seirdv_parameters.parquet  covid_france_seirdv_ready.parquet  covid_france_sir_parameters.csv  covid_france_sir_parameters.parquet
data/processed/analysis/: covid_france_analysis_daily.csv  covid_france_analysis_daily.parquet  covid_france_analysis_weekly.csv  covid_france_analysis_weekly.parquet
data/processed/reports/: covid_france_cleaning_impact_summary.csv  covid_france_coverage_summary.csv  covid_france_pipeline_run_output.txt  covid_france_step2_decisions_summary.txt  covid_france_study_window_daily_coverage.csv  (+3 more)
docs/: seirdv_model_documentation.md  seirdv_results_analysis.md
src/data/: download_data.py  prepare_analysis_data.py  preprocess_data.py
src/diagnostics/: __init__.py  validate_timeseries.py
src/hybrid_sir_ml/: __init__.py
src/modeling/: __init__.py  estimate_seird_parameters.py  estimate_seirdv_parameters.py  estimate_sir_parameters.py  prepare_seird_data.py  prepare_seirdv_data.py
src/sir/: __init__.py  sir_preparation.py
src/visualization/: plot_data.py  plot_seird_parameters.py  plot_seirdv_parameters.py  plot_sir_parameters.py
(+13 files in other folders)
